--- a/testimonials/isaac-molina.html
+++ b/testimonials/isaac-molina.html
@@ -3,24 +3,15 @@
         <div class="card-header">
             <div>
                 <a href="#"><img class="rounded" src="https://avatars.githubusercontent.com/eimolina?size=80"></a>
-                <div class="socials">
-                    <a href="#"><img width="20" src="img/twitter.png"></a>
-                    <a href="#"><img width="20" src="img/facebook.png"></a>
-                    <a href="#"><img width="20" src="img/youtube.png"></a>
-                </div>
+
             </div>
             <div class="student-info">
-                <p>Jhon Doe</p>
+                <p>Isaac Molina</p>
                 <p class="bold-text">Developer</p>
             </div>
         </div>
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Fue un enorme gusto compartir con personas en el programa de Bitcoin de Torogoz Dev.</p>
             <p class="card-text"><small class="text-muted">Estudiante</small></p>
         </div>
     </div>
