--- a/index.html
+++ b/index.html
@@ -66,4 +66,25 @@
         async></script>
 </body>
 
+</body>
+<div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 33.3333%; top: 488px;">
+    <div class="card">
+        <div class="card-header">
+            <div>
+                <a href="#"><img class="rounded" src="https://avatars.githubusercontent.com/eimolina?size=80"></a>
+
+            </div>
+            <div class="student-info">
+                <p>Isaac Molina</p>
+                <p class="bold-text">Developer</p>
+            </div>
+        </div>
+        <div class="card-body">
+            <p>Fue un enorme gusto compartir con personas en el programa de Bitcoin de Torogoz Dev.</p>
+            <p class="card-text"><small class="text-muted">Estudiante</small></p>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
